--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "less": "lessc node_modules/ng-zorro-antd/src/ng-zorro-antd.less src/assets/styles/ng-zorro-antd.css --js"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/animations": "^6.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/http": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/router": "^6.0.0",
     "@fancyapps/fancybox": "^3.1.20",
     "@ngx-loading-bar/http-client": "^1.0.0",
     "core-js": "^2.4.1",
@@ -34,16 +35,18 @@
     "ng-zorro-antd": "^0.7.0",
     "ng2-file-upload": "^1.2.1",
     "ngx-bootstrap": "^2.0.0-rc.0",
-    "rxjs": "^5.5.2",
+    "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.1.0",
     "socket.io-client": "^2.1.0",
     "sweetalert2": "^7.18.0",
     "three": "^0.91.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
+    "@angular-devkit/build-angular": "~0.6.3",
+    "@angular/cli": "^6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/language-service": "^6.0.0",
     "@types/backbone": "^1.3.42",
     "@types/fancybox": "^2.1.32",
     "@types/jasmine": "2.5.45",
@@ -59,9 +62,10 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "less": "^3.0.4",
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "^2.7.2"
   }
 }
